--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Testing_">
         <activity
+            android:name=".ProfileInput"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileUpdate"
+            android:exported="false" />
+        <activity
             android:name=".ShowProfile"
             android:exported="false" />
         <activity
